# advent-of-code

./: .dir-locals.el  .envrc  .gitignore  AOC1.hs  AOC1.pl  AOC2.hs  AOC3.hs  AOC4.hs  AOC5.hs  AOC6.hs  AOC7.hs  AOC8.hs  AOC_09.hs  AOC_10.hs  AOC_11.hs  AOC_12.hs  AOC_13.hs  AOC_14.hs  AOC_16.hs  AOC_18.hs  AOC_19.hs  AOC_20.hs  AOC_21.hs  AOC_22.hs  AOC_23.hs  AOC_24.hs  AdventOfCode.cabal  AdventOfCode2016.cabal  Cargo.toml  LICENSE  README.md  check  check-inner  compile-and-run  default.nix  download-answers  download-inputs  run  shell  stack.yaml
2015/: AOC_01_1.hs  AOC_01_2.hs  AOC_02_1.hs  AOC_02_2.hs  AOC_03_1.hs  AOC_03_2.hs  AOC_04_1.hs  AOC_04_2.hs  AOC_05_1.hs  AOC_05_2.hs  AOC_06_1.hs  AOC_06_2.hs  AOC_07_1.hs  AOC_07_2.hs  AOC_08_1.hs  AOC_08_2.hs  AOC_09_1.hs  AOC_09_2.hs  AOC_10_1.hs  AOC_10_2.hs  AOC_11_1.hs  AOC_11_2.hs  AOC_12_1.hs  AOC_12_2.hs  AOC_13_1.hs  AOC_13_2.hs  AOC_14_1.hs  AOC_14_2.hs  AOC_15_1.hs  AOC_15_2.hs  AOC_16_1.hs  AOC_16_2.hs  AOC_17_1.hs  AOC_17_2.hs  AOC_18_1.hs  AOC_18_2.hs  AOC_19_1.hs  AOC_19_2.hs  AOC_20_1.hs  AOC_20_2.hs  (+11 more)
2016/: AOC_01.hs  AOC_01_1.hs  AOC_01_2.hs  AOC_02_1.hs  AOC_02_2.hs  AOC_03_1.hs  AOC_03_2.hs  AOC_04_1.hs  AOC_04_2.hs  AOC_05_1.hs  AOC_05_2.hs  AOC_07_1.hs  AOC_07_2.hs  AOC_08_1.hs  AOC_08_2.hs  AOC_09_1.hs  AOC_09_2.hs  AOC_10_1.hs  AOC_10_2.hs  AOC_11_1.hs  AOC_11_2.hs  AOC_12_1.hs  AOC_12_2.hs  AOC_13_1.hs  AOC_13_2.hs  AOC_14_1.hs  AOC_14_2.hs  AOC_15.hs  AOC_15_2.hs  AOC_16_1.hs  AOC_16_2.hs  AOC_17_1.hs  AOC_17_2.hs  AOC_18.hs  AOC_18_1.hs  AOC_18_2.hs  AOC_19_1.hs  AOC_19_2.hs  AOC_20.hs  AOC_20_1.hs  (+13 more)
2017/: AOC_01_1.pl  AOC_01_2.pl  AOC_02_1.pl  AOC_02_2.pl  AOC_03_1.pl  AOC_03_2.pl  AOC_04_1.pl  AOC_04_2.pl  AOC_05_1.pl  AOC_05_2.pl  AOC_06_1.pl  AOC_06_2.pl  AOC_07_1.pl  AOC_07_2.pl  AOC_08_1.pl  AOC_08_2.pl  AOC_09_1.pl  AOC_09_2.pl  AOC_10_1.pl  AOC_10_2.pl  AOC_11_1.pl  AOC_11_2.pl  AOC_12_1.pl  AOC_12_2.pl  AOC_13_1.pl  AOC_13_2.pl  AOC_14_1.pl  AOC_14_2.pl  (+23 more)
2019/: AOC_01_1.rs  AOC_01_2.rs  AOC_02_1.rs  AOC_02_2.rs  AOC_03_1.rs  AOC_03_2.rs  AOC_04_1.rs  AOC_04_2.rs  AOC_05_1.rs  AOC_05_2.rs  AOC_06_1.rs  AOC_06_2.rs  AOC_07_1.rs  AOC_07_2.rs  AOC_08_1.rs  AOC_08_2.rs  AOC_09_1.rs  AOC_09_2.rs  AOC_10_1.rs  AOC_10_2.rs  AOC_11_1.rs  AOC_11_2.rs  AOC_12_1.rs  AOC_12_2.rs  AOC_13_1.rs  AOC_13_2.rs  AOC_14_1.rs  AOC_14_2.rs  AOC_15_1.rs  AOC_15_2.rs  AOC_16_1.rs  AOC_16_2.rs  Cargo.template.toml  Cargo.toml  debug.rs  digits.rs  errors.rs  intcode.rs  numbers.rs  parse.rs  (+2 more)
(+305 files in other folders)
