name:                AdventOfCode2016
version:             0.1.0.0
synopsis:            Advent of Code 2016 solutions
description:         Please see README.md
homepage:            https://github.com/SamirTalwar/AdventOfCode2016#readme
license:             MIT
license-file:        LICENSE
author:              Samir Talwar
maintainer:          samir@noodlesandwich.com
copyright:           Samir Talwar
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  build-depends:       base >= 4.7 && < 5
                     , array
                     , bytestring
                     , containers
                     , cryptonite
                     , hashmap
                     , parsec
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SamirTalwar/AdventOfCode2016
