[package]
name = "advent-of-code-2019"
version = "1.0.0"
authors = ["Samir Talwar <samir@noodlesandwich.com>"]
edition = "2018"

[[bin]]
name = "aoc_2019_01_1"
path = "AOC_01_1.rs"

[[bin]]
name = "aoc_2019_01_2"
path = "AOC_01_2.rs"

[[bin]]
name = "aoc_2019_02_1"
path = "AOC_02_1.rs"

[[bin]]
name = "aoc_2019_02_2"
path = "AOC_02_2.rs"

[dependencies]
